[package]
name = "steam-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
byteorder = "1.5.0"
itertools = "0.14.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_qs = "1.0.0"
steam-types = { path = "../steam-types/" }
steam-vdf-parser = "0.1.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
