[package]
name = "steam-client"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.102"
bytemuck = "1.25.0"
byteorder = "1.5.0"
cbc = "0.1.2"
cipher = { version = "0.4", features = ["alloc"] }
crc = "3.4.0"
ecb = "0.1.2"
flate2 = { version = "1" }
hmac = "0.12.1"
itertools = "0.14.0"
lazy_static = "1.5.0"
rand = "0.8"
reqwest = { version = "0.13.2", features = ["json"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_qs = "1.0.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
steam-types = { path = "../steam-types/" }
steam-vdf-parser = "0.1.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
